// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Seasons 1`] = `
<div>
  <h1>
    Choose which team/season you want to check.
  </h1>
  <div>
    <form>
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    id="menu-bar"
    onMouseDown={[Function]}
  >
    <div
      className="entry-selection"
      onClick={[Function]}
    >
      SeasonNumber
    </div>
  </div>
</div>
`;

exports[`renders correctly with Teams 1`] = `
<div>
  <h1>
    Choose which team/season you want to check.
  </h1>
  <div>
    <form>
      <input
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    id="menu-bar"
    onMouseDown={[Function]}
  >
    <div
      className="entry-selection"
      onClick={[Function]}
    >
      Fake team
    </div>
  </div>
</div>
`;
